# call_me_maybe

./: Makefile  pyproject.toml  setup.cfg
data/input/: function_calling_tests.json
src/: __main__.py  constrained_decoder.py  file_handler.py  models.py  pipeline.py  tokenizer.py
