[project]
name = "call-me-maybe"
version = "0.1.0"
description = "LLM function calling with constrained decoding"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.52",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.13.4",
    "numpy>=2.2.6",
    "llm-sdk",
    "fire>=0.7.1",
    "typing-inspection>=0.4.2",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true